[package]
name = "ecs-watch"
version = "0.1.0"
authors = ["Bruce Adams <bruce.adams@acm.org>"]
categories = ["command-line-utilities"]
description = "Watch AWS Elastic Container Service (ECS) cluster changes"
edition = "2018"
homepage = "https://github.com/bruceadams/ecs-watch"
keywords = ["aws", "cli"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/bruceadams/ecs-watch"

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.19"
exitfailure = "0.5.1"
rusoto_core = "0.47.0"
rusoto_ecs = "0.47.0"
snafu = "0.6.10"
time = "0.3.0"

[dependencies.clap]
features = ["wrap_help"]
version = "3.0.0-beta.4"

[dependencies.tokio]
version = "1.9.0"
features = ["macros", "rt-multi-thread", "time"]
